fix(admin): align list action menus

--- a/apps/admin/src/pages/Content/Papers/index.less
+++ b/apps/admin/src/pages/Content/Papers/index.less
@@ -59,5 +59,9 @@
 }
 
 .paper-actions-cell {
-  text-align: right;
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-start;
+  min-width: 64px;
+  text-align: left;
 }
